--- a/Song Selector.html
+++ b/Song Selector.html
@@ -5,8 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Song Selector.css" />
+
 </head>
 <body>
-    
+    <!-- First Shuffle Div -->
+    <h1>Song Selector</h1>
+    <div class="shuffle-box">
+        <div class="result one">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+        <div class="result two">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+        <div class="result three">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+        <div class="result four">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+        <div class="result five">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+    </div>
+    <!-- Shuffle Button -->
+    <input type="button" value="Shuffle"/>
+    <!-- Previous Shuffle -->
+    <div class="previous">
+        <div class="result result-six">
+            <!-- <img src=""> -->
+            <p class="title">Title</p>
+            <p class="artist">Artist</p>
+            <p class="bpm">BPM</p>
+            <p class="hyper-link">Hyper Link</p>
+        </div>
+    </div>
+    <!-- List Interaction -->
+    <input type="button" value="Show All Songs">    <input type="button" value="Add Song to List">  <input type="button" value="Delete Song from List">
+    <div class="Song-list hidden"></div>
 </body>
 </html>
