--- a/Song Selector.html
+++ b/Song Selector.html
@@ -11,47 +11,59 @@
 <body>
     <!-- First Shuffle Div -->
     <h1>Song Selector</h1>
-    <div class="shuffle-box">
+    <div class="shuffle-box purple">
         <div class="result one">
-            <!-- <img src=""> -->
+            <img src="Snapchat-581566418.jpg" alt="Album Cover">
+            <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
             <p class="bpm">BPM</p>
             <p class="hyper-link">Hyper Link</p>
+            </div>
         </div>
         <div class="result two">
-            <!-- <img src=""> -->
+            <img src="Snapchat-581566418.jpg" alt="Album Cover">
+            <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
             <p class="bpm">BPM</p>
             <p class="hyper-link">Hyper Link</p>
+            </div>
         </div>
         <div class="result three">
-            <!-- <img src=""> -->
+            <img src="Snapchat-581566418.jpg" alt="Album Cover">
+            <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
             <p class="bpm">BPM</p>
             <p class="hyper-link">Hyper Link</p>
+            </div>
         </div>
         <div class="result four">
-            <!-- <img src=""> -->
+            <img src="Snapchat-581566418.jpg" alt="Album Cover">
+            <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
             <p class="bpm">BPM</p>
             <p class="hyper-link">Hyper Link</p>
+            </div>
         </div>
         <div class="result five">
-            <!-- <img src=""> -->
+            <img src="Snapchat-581566418.jpg" alt="Album Cover">
+            <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
             <p class="bpm">BPM</p>
             <p class="hyper-link">Hyper Link</p>
+            </div>
         </div>
     </div>
     <!-- Shuffle Button -->
-    <input type="button" value="Shuffle"/>
+    <div class="shuffle">
+    <input type="button" value="Shuffle" class="shuffle-btn"/>
+    </div>
     <!-- Previous Shuffle -->
-    <div class="previous">
+    <div class="previous purple">
         <div class="result result-six">
             <!-- <img src=""> -->
             <p class="title">Title</p>
@@ -61,7 +73,9 @@
         </div>
     </div>
     <!-- List Interaction -->
-    <input type="button" value="Show All Songs">    <input type="button" value="Add Song to List">  <input type="button" value="Delete Song from List">
+    <div class="interaction">
+    <input type="button" value="Show All Songs" class="interaction-btn">    <input type="button" value="Add Song to List" class="interaction-btn">  <input type="button" value="Delete Song from List" class="interaction-btn">
+    </div>
     <div class="Song-list hidden"></div>
 </body>
 </html>
