--- a/Song Selector.html
+++ b/Song Selector.html
@@ -17,8 +17,8 @@
             <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
+            <p class="key">Key</p>
             <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
             </div>
         </div>
         <div class="result two">
@@ -26,8 +26,8 @@
             <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
+            <p class="key">Key</p>
             <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
             </div>
         </div>
         <div class="result three">
@@ -35,8 +35,8 @@
             <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
+            <p class="key">Key</p>
             <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
             </div>
         </div>
         <div class="result four">
@@ -44,8 +44,8 @@
             <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
+            <p class="key">Key</p>
             <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
             </div>
         </div>
         <div class="result five">
@@ -53,8 +53,8 @@
             <div class="info-box">
             <p class="title">Title</p>
             <p class="artist">Artist</p>
+            <p class="key">Key</p>
             <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
             </div>
         </div>
     </div>
@@ -66,16 +66,18 @@
     <div class="previous purple">
         <div class="result result-six">
             <!-- <img src=""> -->
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="bpm">BPM</p>
-            <p class="hyper-link">Hyper Link</p>
+            <p class="pre1">Song 1</p>
+            <p class="pre2">Song 2</p>
+            <p class="pre3">Song 3</p>
+            <p class="pre4">Song 4</p>
         </div>
     </div>
     <!-- List Interaction -->
     <div class="interaction">
     <input type="button" value="Show All Songs" class="interaction-btn">    <input type="button" value="Add Song to List" class="interaction-btn">  <input type="button" value="Delete Song from List" class="interaction-btn">
     </div>
-    <div class="Song-list hidden"></div>
+    <div class="Song-list hidden">
+        <p>content</p>
+    </div>
 </body>
 </html>
