--- a/Song Selector.html
+++ b/Song Selector.html
@@ -9,75 +9,78 @@
 
 </head>
 <body>
-    <!-- First Shuffle Div -->
-    <h1>Song Selector</h1>
-    <div class="shuffle-box purple">
-        <div class="result one">
-            <img src="Snapchat-581566418.jpg" alt="Album Cover">
-            <div class="info-box">
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="key">Key</p>
-            <p class="bpm">BPM</p>
+    <div class="page">
+        <!-- First Shuffle Div -->
+        <h1>Song Selector</h1>
+        <div class="shuffle-box purple">
+            <div class="result one">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <div class="info-box">
+                <p class="title">Title</p>
+                <p class="artist">Artist</p>
+                <p class="key">Key</p>
+                <p class="bpm">BPM</p>
+                </div>
+            </div>
+            <div class="result two">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <div class="info-box">
+                <p class="title">Title</p>
+                <p class="artist">Artist</p>
+                <p class="key">Key</p>
+                <p class="bpm">BPM</p>
+                </div>
+            </div>
+            <div class="result three">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <div class="info-box">
+                <p class="title">Title</p>
+                <p class="artist">Artist</p>
+                <p class="key">Key</p>
+                <p class="bpm">BPM</p>
+                </div>
+            </div>
+            <div class="result four">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <div class="info-box">
+                <p class="title">Title</p>
+                <p class="artist">Artist</p>
+                <p class="key">Key</p>
+                <p class="bpm">BPM</p>
+                </div>
+            </div>
+            <div class="result five">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <div class="info-box">
+                <p class="title">Title</p>
+                <p class="artist">Artist</p>
+                <p class="key">Key</p>
+                <p class="bpm">BPM</p>
+                </div>
             </div>
         </div>
-        <div class="result two">
-            <img src="Snapchat-581566418.jpg" alt="Album Cover">
-            <div class="info-box">
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="key">Key</p>
-            <p class="bpm">BPM</p>
+        <!-- Shuffle Button -->
+        <div class="shuffle">
+        <input type="button" value="Shuffle" class="shuffle-btn"/>
+        </div>
+        <!-- Previous Shuffle -->
+        <div class="previous purple">
+            <div class="result result-six">
+                <!-- <img src=""> -->
+                <p class="pre1">Song 1</p>
+                <p class="pre2">Song 2</p>
+                <p class="pre3">Song 3</p>
+                <p class="pre4">Song 4</p>
             </div>
         </div>
-        <div class="result three">
-            <img src="Snapchat-581566418.jpg" alt="Album Cover">
-            <div class="info-box">
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="key">Key</p>
-            <p class="bpm">BPM</p>
-            </div>
+        <hr>
+        <!-- List Interaction -->
+        <div class="interaction">
+        <input type="button" value="Show All Songs" class="interaction-btn">    <input type="button" value="Add Song to List" class="interaction-btn">  <input type="button" value="Delete Song from List" class="interaction-btn">
         </div>
-        <div class="result four">
-            <img src="Snapchat-581566418.jpg" alt="Album Cover">
-            <div class="info-box">
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="key">Key</p>
-            <p class="bpm">BPM</p>
-            </div>
+        <div class="Song-list hidden">
+            <p>content</p>
         </div>
-        <div class="result five">
-            <img src="Snapchat-581566418.jpg" alt="Album Cover">
-            <div class="info-box">
-            <p class="title">Title</p>
-            <p class="artist">Artist</p>
-            <p class="key">Key</p>
-            <p class="bpm">BPM</p>
-            </div>
-        </div>
-    </div>
-    <!-- Shuffle Button -->
-    <div class="shuffle">
-    <input type="button" value="Shuffle" class="shuffle-btn"/>
-    </div>
-    <!-- Previous Shuffle -->
-    <div class="previous purple">
-        <div class="result result-six">
-            <!-- <img src=""> -->
-            <p class="pre1">Song 1</p>
-            <p class="pre2">Song 2</p>
-            <p class="pre3">Song 3</p>
-            <p class="pre4">Song 4</p>
-        </div>
-    </div>
-    <!-- List Interaction -->
-    <div class="interaction">
-    <input type="button" value="Show All Songs" class="interaction-btn">    <input type="button" value="Add Song to List" class="interaction-btn">  <input type="button" value="Delete Song from List" class="interaction-btn">
-    </div>
-    <div class="Song-list hidden">
-        <p>content</p>
     </div>
 </body>
 </html>
