--- a/Song Selector.html
+++ b/Song Selector.html
@@ -14,48 +14,48 @@
         <h1>Song Selector</h1>
         <div class="shuffle-box purple">
             <div class="result one">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img1">
                 <div class="info-box">
-                <p class="title">Title</p>
-                <p class="artist">Artist</p>
-                <p class="key">Key</p>
-                <p class="bpm">BPM</p>
+                <p class="title1">Title</p>
+                <p class="artist1">Artist</p>
+                <p class="key1">Key</p>
+                <p class="bpm1">BPM</p>
                 </div>
             </div>
             <div class="result two">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img2">
                 <div class="info-box">
-                <p class="title">Title</p>
-                <p class="artist">Artist</p>
-                <p class="key">Key</p>
-                <p class="bpm">BPM</p>
+                <p class="title2">Title</p>
+                <p class="artist2">Artist</p>
+                <p class="key2">Key</p>
+                <p class="bpm2">BPM</p>
                 </div>
             </div>
             <div class="result three">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img3">
                 <div class="info-box">
-                <p class="title">Title</p>
-                <p class="artist">Artist</p>
-                <p class="key">Key</p>
-                <p class="bpm">BPM</p>
+                <p class="title3">Title</p>
+                <p class="artist3">Artist</p>
+                <p class="key3">Key</p>
+                <p class="bpm3">BPM</p>
                 </div>
             </div>
             <div class="result four">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img4">
                 <div class="info-box">
-                <p class="title">Title</p>
-                <p class="artist">Artist</p>
-                <p class="key">Key</p>
-                <p class="bpm">BPM</p>
+                <p class="title4">Title</p>
+                <p class="artist4">Artist</p>
+                <p class="key4">Key</p>
+                <p class="bpm4">BPM</p>
                 </div>
             </div>
             <div class="result five">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img5">
                 <div class="info-box">
-                <p class="title">Title</p>
-                <p class="artist">Artist</p>
-                <p class="key">Key</p>
-                <p class="bpm">BPM</p>
+                <p class="title5">Title</p>
+                <p class="artist5">Artist</p>
+                <p class="key5">Key</p>
+                <p class="bpm5">BPM</p>
                 </div>
             </div>
         </div>
@@ -82,5 +82,6 @@
             <p>content</p>
         </div>
     </div>
+    <script src="Song Selector.js"></script>
 </body>
 </html>
