WE IN THERRRRREEEEEE

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -67,10 +67,11 @@
         <div class="previous purple">
             <div class="result result-six">
                 <!-- <img src=""> -->
-                <p class="pre1">Song 1</p>
-                <p class="pre2">Song 2</p>
-                <p class="pre3">Song 3</p>
-                <p class="pre4">Song 4</p>
+                <p class="pre1">Previous Song 1</p>
+                <p class="pre2">Previous Song 2</p>
+                <p class="pre3">Previous Song 3</p>
+                <p class="pre4">Previous Song 4</p>
+                <p class="pre5">Previous Song 5</p>
             </div>
         </div>
         <hr>
