--- a/Song Selector.html
+++ b/Song Selector.html
@@ -14,7 +14,7 @@
         <h1>Song Selector</h1>
         <div class="shuffle-box purple">
             <div class="result one">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img1">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img1">
                 <div class="info-box">
                 <p class="title1">Title</p>
                 <p class="artist1">Artist</p>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="result two">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img2">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img2">
                 <div class="info-box">
                 <p class="title2">Title</p>
                 <p class="artist2">Artist</p>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="result three">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img3">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img3">
                 <div class="info-box">
                 <p class="title3">Title</p>
                 <p class="artist3">Artist</p>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="result four">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img4">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img4">
                 <div class="info-box">
                 <p class="title4">Title</p>
                 <p class="artist4">Artist</p>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="result five">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" class="img5">
+                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img5">
                 <div class="info-box">
                 <p class="title5">Title</p>
                 <p class="artist5">Artist</p>
