--- a/Song Selector.html
+++ b/Song Selector.html
@@ -13,7 +13,7 @@
         <!-- First Shuffle Div -->
         <h1>Song Selector</h1>
         <div class="shuffle-box purple">
-            <div class="result one">
+            <div class="result one hidden">
                 <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img1">
                 <div class="info-box">
                 <p class="title1">Title</p>
@@ -22,7 +22,7 @@
                 <p class="bpm1">BPM</p>
                 </div>
             </div>
-            <div class="result two">
+            <div class="result two hidden">
                 <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img2">
                 <div class="info-box">
                 <p class="title2">Title</p>
@@ -31,7 +31,7 @@
                 <p class="bpm2">BPM</p>
                 </div>
             </div>
-            <div class="result three">
+            <div class="result three hidden">
                 <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img3">
                 <div class="info-box">
                 <p class="title3">Title</p>
@@ -40,7 +40,7 @@
                 <p class="bpm3">BPM</p>
                 </div>
             </div>
-            <div class="result four">
+            <div class="result four hidden">
                 <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img4">
                 <div class="info-box">
                 <p class="title4">Title</p>
@@ -49,7 +49,7 @@
                 <p class="bpm4">BPM</p>
                 </div>
             </div>
-            <div class="result five">
+            <div class="result five hidden">
                 <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img5">
                 <div class="info-box">
                 <p class="title5">Title</p>
@@ -67,11 +67,11 @@
         <div class="previous purple">
             <div class="result result-six">
                 <!-- <img src=""> -->
-                <p class="pre1">Previous Song 1</p>
-                <p class="pre2">Previous Song 2</p>
-                <p class="pre3">Previous Song 3</p>
-                <p class="pre4">Previous Song 4</p>
-                <p class="pre5">Previous Song 5</p>
+                <p class="pre1 hidden">Previous Song 1</p>
+                <p class="pre2 hidden">Previous Song 2</p>
+                <p class="pre3 hidden">Previous Song 3</p>
+                <p class="pre4 hidden">Previous Song 4</p>
+                <p class="pre5 hidden">Previous Song 5</p>
             </div>
         </div>
         <hr>
