trying to make the stupid song list

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -77,10 +77,12 @@
         <hr>
         <!-- List Interaction -->
         <div class="interaction">
-        <input type="button" value="Show All Songs" class="interaction-btn">    <input type="button" value="Add Song to List" class="interaction-btn">  <input type="button" value="Delete Song from List" class="interaction-btn">
+            <input type="button" value="Show All Songs" class="interaction-btn show-btn">
+            <input type="button" value="Add Song to List" class="interaction-btn add-btn">
+            <input type="button" value="Delete Song from List" class="interaction-btn delete-btn">
         </div>
-        <div class="Song-list hidden">
-            <p>content</p>
+        <div class="song-list hidden">
+            <p class="list-content">content</p>
         </div>
     </div>
     <script src="Song Selector.js"></script>
