--- a/Song Selector.html
+++ b/Song Selector.html
@@ -82,6 +82,8 @@
             <input type="button" value="Delete Song from List" class="interaction-btn delete-btn">
         </div>
         <div class="song-list hidden">
+            <ul class="song-list-child">
+            </ul>
             <p class="list-content">content</p>
         </div>
     </div>
