moving boxes thing fixed... for sure this time. display: grid ftw

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -12,50 +12,50 @@
     <div class="page">
         <!-- First Shuffle Div -->
         <h1>Song Selector</h1>
-        <div class="shuffle-box purple">
-            <div class="result one hidden">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img1">
+        <div class="shuffle-box">
+            <div class="result one ">
+                <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img1">
                 <div class="info-box">
-                <p class="title1">Title</p>
-                <p class="artist1">Artist</p>
-                <p class="key1">Key</p>
-                <p class="bpm1">BPM</p>
+                    <p class="title1">Title</p>
+                    <p class="artist1">Artist</p>
+                    <p class="key1">Key</p>
+                    <p class="bpm1">BPM</p>
                 </div>
             </div>
-            <div class="result two hidden">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img2">
+            <div class="result two ">
+                <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img2">
                 <div class="info-box">
-                <p class="title2">Title</p>
-                <p class="artist2">Artist</p>
-                <p class="key2">Key</p>
-                <p class="bpm2">BPM</p>
+                    <p class="title2">Title</p>
+                    <p class="artist2">Artist</p>
+                    <p class="key2">Key</p>
+                    <p class="bpm2">BPM</p>
                 </div>
             </div>
-            <div class="result three hidden">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img3">
+            <div class="result three ">
+                <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img3">
                 <div class="info-box">
-                <p class="title3">Title</p>
-                <p class="artist3">Artist</p>
-                <p class="key3">Key</p>
-                <p class="bpm3">BPM</p>
+                    <p class="title3">Title</p>
+                    <p class="artist3">Artist</p>
+                    <p class="key3">Key</p>
+                    <p class="bpm3">BPM</p>
                 </div>
             </div>
-            <div class="result four hidden">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img4">
+            <div class="result four ">
+                <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img4">
                 <div class="info-box">
-                <p class="title4">Title</p>
-                <p class="artist4">Artist</p>
-                <p class="key4">Key</p>
-                <p class="bpm4">BPM</p>
+                    <p class="title4">Title</p>
+                    <p class="artist4">Artist</p>
+                    <p class="key4">Key</p>
+                    <p class="bpm4">BPM</p>
                 </div>
             </div>
-            <div class="result five hidden">
-                <img src="Snapchat-581566418.jpg" alt="Album Cover" id="img5">
+            <div class="result5 five ">
+                <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img5">
                 <div class="info-box">
-                <p class="title5">Title</p>
-                <p class="artist5">Artist</p>
-                <p class="key5">Key</p>
-                <p class="bpm5">BPM</p>
+                    <p class="title5">Title</p>
+                    <p class="artist5">Artist</p>
+                    <p class="key5">Key</p>
+                    <p class="bpm5">BPM</p>
                 </div>
             </div>
         </div>
@@ -64,14 +64,14 @@
         <input type="button" value="Shuffle" class="shuffle-btn"/>
         </div>
         <!-- Previous Shuffle -->
-        <div class="previous purple">
-            <div class="result result-six">
+        <div class="previous">
+            <div class="prev-result result-six">
                 <!-- <img src=""> -->
-                <p class="pre1 hidden">Previous Song 1</p>
-                <p class="pre2 hidden">Previous Song 2</p>
-                <p class="pre3 hidden">Previous Song 3</p>
-                <p class="pre4 hidden">Previous Song 4</p>
-                <p class="pre5 hidden">Previous Song 5</p>
+                <p class="pre1 hidden prev">Previous Song 1</p>
+                <p class="pre2 hidden prev">Previous Song 2</p>
+                <p class="pre3 hidden prev">Previous Song 3</p>
+                <p class="pre4 hidden prev">Previous Song 4</p>
+                <p class="pre5 hidden prev">Previous Song 5</p>
             </div>
         </div>
         <hr>
