It's Grace Note now

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Song Selector</title>
+    <title>Grace Note</title>
     <link rel="stylesheet" href="Song Selector.css" />
 
 </head>
 <body>
     <div class="page">
         <!-- First Shuffle Div -->
-        <h1>Song Selector</h1>
         <div class="shuffle-box">
+            <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
             <div class="result one hidden">
                 <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img1">
                 <div class="info-box">
