new look again. still not sure what colors to go with

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div class="page">
+        <div class="logo-box">
+        <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
+        <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
+        </div>
         <!-- First Shuffle Div -->
         <div class="shuffle-box">
-            <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
             <div class="result one hidden">
                 <img src="Snapchat-581566418.jpg" class="result-img" alt="Album Cover" id="img1">
                 <div class="info-box">
@@ -86,6 +89,9 @@
             </ul>
         </div>
     </div>
+    <footer>
+        <a target="_blank" href="https://icons8.com/icon/41659/menu">Menu</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
     <script src="Song Selector.js"></script>
 </body>
 </html>
