Working on Menu item;

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -12,6 +12,9 @@
     <div class="page">
         <div class="logo-box">
         <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
+        <div class="menu hidden">
+
+        </div>
         <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
         </div>
         <!-- First Shuffle Div -->
