menu button javascript

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -13,7 +13,15 @@
         <div class="logo-box">
         <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
         <div class="menu hidden">
-
+            <h1 class="menu-title">Menu</h1>
+            <nav>
+                <ul>
+                    <li class="nav-link"><a>Home</a></li>
+                    <li class="nav-link"><a>Song Selector</a></li>
+                    <li class="nav-link"><a>Song List</a></li>
+                    <li class="nav-link"><a>Settings</a></li>
+                </ul>
+            </nav>
         </div>
         <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
         </div>
