fixed colors pretty good i think

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -12,7 +12,7 @@
     <div class="page">
         <div class="logo-box">
         <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
-        <div class="menu hidden">
+        <div class="menu">
             <h1 class="menu-title">Menu</h1>
             <nav>
                 <ul>
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-        <img src="Logo/logo-no-background.png" class="logo" alt="Grace Note" />
+        <img src="Logo/logo-blue-gold-no-background.png" class="logo" alt="Grace Note" />
         </div>
         <!-- First Shuffle Div -->
         <div class="shuffle-box">
