changed font, added footer, and did something else I don't remember

--- a/Song Selector.html
+++ b/Song Selector.html
@@ -13,7 +13,7 @@
         <div class="logo-box">
         <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
         <div class="menu">
-            <h1 class="menu-title">Menu</h1>
+            <h1 class="menu-title">Grace Note</h1>
             <nav>
                 <ul>
                     <li class="nav-link"><a>Home</a></li>
@@ -101,7 +101,11 @@
         </div>
     </div>
     <footer>
+        <p>All rights reserved<br>
+            Trademarked by "Jamontaveous and 'nem"<br>
+            Shoutout to my Wifey<br>
         <a target="_blank" href="https://icons8.com/icon/41659/menu">Menu</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        </p>
     </footer>
     <script src="Song Selector.js"></script>
 </body>
