menu changes and fonts and what not

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 </head>
 <body>
-    <div class="page">
-        <div class="logo-box">
-        <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
+    <div class="menu-btn-container">
+        <div class="menu-btn">
+            <img src="Icon/icons8-menu-40.png" class="menu-btn" alt="Menu" />
+        </div>
+    </div>
+    <div class="menu-container">
         <div class="menu">
             <h1 class="menu-title">Grace Note</h1>
             <nav>
@@ -23,6 +26,9 @@
                 </ul>
             </nav>
         </div>
+    </div>
+    <div class="page">
+        <div class="logo-box">
         <img src="Logo/logo-blue-gold-no-background.png" class="logo" alt="Grace Note" />
         </div>
         <!-- First Shuffle Div -->
